# prelude-runner

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: test.yml
src/prelude_runner/: __init__.py  cli.py  core.py  types.py
tests/: test_runner.py
tests/data/config/: prelude_cell.py
tests/data/notebooks/: example-py.ipynb  example.ipynb
tests/example-config/: prelude_cell.py
